--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,7 @@
   <div class="div-center">
     <div id="my_create_form" style="display: none;">
       <h1 style="margin-bottom: 2px;">Simple Antrian</h1>
-      <span>Buat simulasi antrian dengan mudah dan cepat.</span>
+      <span>Buat simulasi antrian dengan mudah dan cepat. <a href="https://github.com/herudi/simple-antrian" target="_blank">github</a></span>
       <hr />
       <form class="pure-form pure-form-stacked" id="display_form">
         <fieldset>
