--- a/template/display.html
+++ b/template/display.html
@@ -46,7 +46,7 @@
   <div class="mycenter">
     <div style="text-align: center; display: none;" id="loading">
       <div class="loading"></div>
-      <h4><b>mohon tunggu dengan menyiapkan audio...</b></h4>
+      <h4><b>mohon tunggu sedang menyiapkan audio...</b></h4>
     </div>
     <div style="text-align: center;" id="prepare">
       <p><b>Ini adalah halaman display anda. Silahkan pilih opsi.</b></p>
