--- a/src/css/display.css
+++ b/src/css/display.css
@@ -64,3 +64,18 @@ body {
     -webkit-transform: rotate(360deg);
   }
 }
+
+#my_progress {
+  width: 100%;
+  background-color: grey;
+}
+
+#my_bar {
+  width: 0%;
+  height: 20px;
+  background-color: #1d276e;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: white;
+}
